<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_new_tab"
        android:title="@string/new_tab"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_close_tab"
        android:title="@string/close_tab"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add_bookmark"
        android:title="@string/add_bookmark"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_bookmarks"
        android:title="@string/bookmarks"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_history"
        android:title="@string/history"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_downloads"
        android:title="@string/downloads"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_incognito"
        android:title="@string/new_incognito_tab"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_save_password"
        android:title="@string/save_password"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_passwords"
        android:title="@string/passwords"
        app:showAsAction="never" />
</menu>
